--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52891,7 +52891,7 @@ tr.show-desktop {
   line-height: 20px !important;
   padding-left: 8px !important;
 }
-._zdxht7 {
+.w-100 {
   width: 100% !important;
 }
 ._1wdpmqe {
