--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4299,6 +4299,12 @@ select[disabled] {
   margin: 0 !important;
   padding: 0 !important;
 }
+.mw-100 {
+  max-width: 100%;
+}
+.w-100 {
+  width: 100% !important;
+}
 /* /Utilities */
 
 /* Footer */
