--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -255,4 +255,10 @@
   margin: 0 !important;
   padding: 0 !important;
 }
+.mw-100 {
+  max-width: 100%;
+}
+.w-100 {
+  width: 100% !important;
+}
 /* /Utilities */
