--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -261,4 +261,16 @@
 .w-100 {
   width: 100% !important;
 }
+.img-full {
+  height: 0 !important;
+  width: 0 !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  .img-full {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
 /* /Utilities */
