--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -273,4 +273,10 @@
     position: static !important;
   }
 }
+.table-container {
+  display: table !important;
+  position: relative !important;
+  height: 100% !important;
+  width: 100% !important;
+}
 /* /Utilities */
