--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -279,4 +279,8 @@
   height: 100% !important;
   width: 100% !important;
 }
+.cell-middle {
+  display: table-cell !important;
+  vertical-align: middle !important;
+}
 /* /Utilities */
