extract img-middle

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4400,7 +4400,10 @@ select[disabled] {
     background-image: none !important;
   }
 }
-/* /Utilities */
+.img-middle {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}/* /Utilities */
 
 /* Footer */
 @media (min-width: 744px) {
