--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -372,4 +372,7 @@
     background-image: none !important;
   }
 }
-/* /Utilities */
+.img-middle {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}/* /Utilities */
