--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9303,6 +9303,63 @@ fieldset[disabled] .btn {
 }
 /* /New card */
 
+/* Pagination bullets */
+.pagination-bullets {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  align-items: flex-end !important;
+  display: flex !important;
+  justify-content: center !important;
+  height: 100% !important;
+}
+.pagination-bullets__container {
+  display: flex !important;
+  overflow: hidden !important;
+  padding-bottom: 12px !important;
+  max-width: 55px !important;
+}
+@supports (overflow: clip) {
+  .pagination-bullets__container {
+    overflow: clip !important;
+  }
+}
+.pagination-bullets__list {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  align-items: flex-end !important;
+  display: flex !important;
+  justify-content: center !important;
+  list-style-type: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+}
+.pagination-bullets__item--active {
+  background: #fff !important;
+  border-radius: 50% !important;
+  height: 6px !important;
+  margin-left: 2.5px !important;
+  margin-right: 2.5px !important;
+  min-width: 6px !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+  width: 6px !important;
+  opacity: 1 !important;
+}
+.pagination-bullets__item {
+  background: #fff !important;
+  border-radius: 50% !important;
+  height: 6px !important;
+  margin-left: 2.5px !important;
+  margin-right: 2.5px !important;
+  min-width: 6px !important;
+  opacity: 0.6 !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+  width: 6px !important;
+}
+/* /Pagination bullets */
+
 /* Pricing */
 .pricing__info {
   -webkit-box-lines: var(
