extract box-border

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4403,7 +4403,12 @@ select[disabled] {
 .img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
-}/* /Utilities */
+}
+.box-border {
+  --webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/* /Utilities */
 
 /* Footer */
 @media (min-width: 744px) {
