--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -375,4 +375,9 @@
 .img-middle {
   background-position: 50% 50% !important;
   background-repeat: no-repeat !important;
-}/* /Utilities */
+}
+.box-border {
+  --webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+/* /Utilities */
